--- a/stytle.css
+++ b/stytle.css
@@ -146,3 +146,58 @@ h4{
         background-color: var(--personal);
         box-shadow: var(--personal-glow);
     }
+
+   input:checked ~ .bubble::after{
+        width: 10px;
+        height: 10px;
+        opacity: 1;
+    }
+
+    .create-todo input[type="submit"]{
+        display: block;
+        width: 100%;
+        font-size: 1.2rem;
+        padding: 1rem 1.5rem;
+        color: #FFF;
+        font-weight: 700;
+        text-transform: uppercase;
+        background-color: var(--primary);
+        box-shadow: var(--personal-glow);
+        border-radius: 0.5rem;
+        cursor: pointer;
+        transition: 0.2s ease-out;
+    }
+
+    .create-todo input[type="submit"]:hover{
+        opacity: 0.75;
+    }
+
+    .todo-list .list{
+        margin: 1rem 0;
+
+    }
+
+    .todo-list .todo-item{
+        display: flex;
+        align-items: center;
+        background-color: #FFF;
+        padding: 1rem;
+        border-radius: 0.5rem;
+        box-shadow: var(--shadow);
+        margin-bottom: 1rem;
+
+    }
+
+    .todo-item label{
+        display: block;
+        margin-right: 1rem;
+        cursor: pointer;
+
+    }
+
+    .todo-item .todo-content{
+        flex: 1 1 0%;
+    }
+
+    
+
